<resources>
    <string name="app_name">Habit N Me</string>
    <string name="login_text">Login</string>
    <string name="no_account_text">No account yet? Create one</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="name_text">Name</string>
    <string name="create_text">Create Account</string>
    <string name="already_login_text">Already a member? Login</string>
    <string name="forgot_text">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_string">Profile</string>
    <string name="progress_string">Progress</string>
    <string name="title_activity_goal_detail_view">GoalDetailView</string>
    <string name="category_text">Category</string>
    <string name="select_type_string">Select type of habit \nYes/No - simple yes or no is success \n Number - Have x amount in a day</string>
    <string name="yes_no_text">Yes/No Habit</string>
    <string name="number_based_text">Number based</string>
    <string name="add_habit_hint_yes_no">For ex: go or don\'t go to gym, eat or avoid sugar etc.</string>
    <string name="times_a_week_string">times per week</string>
    <string name="i_want_to_text">I want to</string>
    <string name="action_verb_hint">ex. do/drink/eat/consume</string>
    <string name="number_habit_hint">ex coffee/sugar/walk</string>
    <string name="number_habit_metric_hint">ex times/grams/minutes/steps</string>
    <string name="everday_text">Everyday</string>
    <string name="submit_text">Submit</string>
    <string name="add_success">Habit created successfully</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="view_progress">View Progress</string>
    <string name="done_text">Done</string>
    <string name="notdone_text">Not Done</string>
    <string name="set_count">Set Count</string>
    <string name="set_number_text">Set current number</string>
    <string name="set_number_text_example">Such habits require specific number.\\nFor ex: less than 2 cups of tea,eat veggies twice a day</string>
    <string name="please_enter_name">Please enter habit name</string>
    <string name="please_select">Please select one of options</string>
    <string name="please_fill_fields">Please fill all the fields</string>
    <string name="done_for_day_mark">Mark as done</string>
    <string name="no_text">NO</string>
    <string name="yes_text">YES</string>
    <string name="num_times_a_week_text">times per week</string>
    <string-array name="category_array">
        <item>Health</item>
        <item>Fitness</item>
        <item>Food</item>
        <item>Reading</item>
        <item>Study</item>
        <item>Other</item>
    </string-array>
    <string-array name="yes_no_selector_array">
        <item>I want to</item>
        <item>I do not want to</item>
    </string-array>
    <string-array name="timesAWeek">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="metric_selection_array">
        <item>at least</item>
        <item>at most</item>
        <item>exactly</item>

    </string-array>
    <string name="appwidget_text">Widget for habits</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_string">No habits due</string>
    <string name="missed_text">Missed</string>
    <string name="delete_text">Delete habit</string>
    <string name="enter_name_text">Enter Name</string>
    <string name="select_metric">select metric</string>
    <string name="select_want_not_want">Select you want or not want to do</string>
    <string name="nav_hint">Navigation bar open</string>
    <string name="logo">Logo</string>
    <string name="month_view">View for this month</string>
    <string name="select_goal">Select goal to see</string>
    <string name="add_habit_hint">Add Habit</string>
    <string name="set_done_for">Set done for date</string>
    <string name="set_day_count">Set count for day</string>
    <string name="action_logout">logout</string>
    <string name="enter_email_text">Please enter email</string>
    <string name="enter_pass_text">Please enter password</string>
    <string name="fail_auth">Authentication failed.</string>
    <string name="user_success">User created succesfully.</string>

</resources>
