<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_type_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abhishek.android.habitnme.TypeSelectionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="24dp"
        android:padding="12dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/yes_no_button"
        android:text="@string/yes_no_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:gravity="start"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/add_habit_hint_yes_no"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="24dp"
        android:padding="12dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/number_button"
        android:text="@string/number_based_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:gravity="start"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/set_number_text_example"/>
    </LinearLayout>

</ScrollView>
