<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"

    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goal_description"

        style="@style/Base.TextAppearance.AppCompat.Body1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number_seeter"
        android:visibility="visible"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:gravity="start|center"
            android:text="@string/done_for_day_mark"
            />
        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start|center"
            android:textOff="@string/no_text"
            android:textOn="@string/yes_text"
            android:id="@+id/toggle_done"/>
    </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_setcount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:padding="12dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/done_text"/>
    </LinearLayout>
</ScrollView>