<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abhishek.android.habitnme.AddNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="end"
                android:textSize="30sp"
                android:text="@string/name_text"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="start"
                android:hint="@string/enter_name_text"
                android:focusable="true"
                android:id="@+id/habit_name_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:padding="5dp">
            <EditText
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:id="@+id/action_verb_id"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:hint="@string/action_verb_hint"
                android:focusable="true"
                android:inputType="text"
                android:layout_marginTop="0dp"
                />
            <Spinner
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:contentDescription="@string/select_metric"
                android:focusable="true"
                android:id="@+id/number_action_selector"
                />
            <EditText
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:focusable="true"
                android:inputType="numberSigned"
                android:id="@+id/number_habit_x_count"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:padding="5dp">
        <EditText
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:focusable="true"
            android:inputType="text"
            android:id="@+id/number_habit_x_metric"
            android:hint="@string/number_habit_metric_hint"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:id="@+id/number_times_a_week_text"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/everday_text"/>
    </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:focusable="true"
        android:contentDescription="@string/submit_text"
        android:text="@string/submit_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/habit_edit_view"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:orientation="horizontal"
            android:visibility="visible"
            >
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_delete_habit"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:contentDescription="@string/delete_text"
                android:focusable="true"
                android:text="@string/delete_text"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_done_habit"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:contentDescription="@string/done_text"
                android:focusable="true"
                android:text="@string/done_text"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
