<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_habit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:padding="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/category_text"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/categorySelector"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text= "@string/select_type_string"
            style="@style/Base.TextAppearance.AppCompat.Body1"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/yes_no_text"
                android:checked="true"
                android:id="@+id/yesNoSelection"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number_based_text"
                android:id="@+id/number_based_selection"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/name_text"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:id="@+id/habit_name_text"/>
        </LinearLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:columnCount="1"
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/yes_no_layout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/yes_no_action_selector"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:id="@+id/habit_describe_text"
                    android:inputType="text"
                    android:hint="@string/add_habit_hint_yes_no"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/num_times_a_week_selector"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/times_a_week_text"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:hint="@string/times_a_week_string"/>
            </LinearLayout>
        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:columnCount="2"
            android:id="@+id/number_layout"
            android:visibility="visible">
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"> -->
                <!--<TextView
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_gravity="fill"
                    android:id="@+id/number_action_first"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:text="@string/i_want_to_text"
                    /> -->
                <!--<android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    > -->
                <EditText
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_gravity="fill"
                    android:id="@+id/action_verb_id"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:hint="@string/action_verb_hint"
                    android:inputType="text"
                    android:layout_marginTop="0dp"
                    />
               <!-- </android.support.design.widget.TextInputLayout> -->
                <Spinner
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_gravity="fill"
                    android:id="@+id/number_action_selector"
                    />
                <EditText
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_gravity="fill"
                    android:id="@+id/number_habit_x_count"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    />
            <!--</LinearLayout> -->
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"> -->
                <EditText
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_gravity="fill"
                    android:inputType="number"
                    android:id="@+id/number_habit_x_description"
                    android:hint="@string/number_habit_hint"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    />
                <EditText
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_gravity="fill"
                    android:id="@+id/number_habit_x_metric"
                    android:hint="@string/number_habit_metric_hint"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    />
                <TextView
                    android:layout_columnSpan="1"
                    android:layout_rowSpan="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:id="@+id/number_times_a_week_text"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:text="@string/everday_text"/>
            <!--</LinearLayout> -->
        </GridLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit_habit"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/submit_text"/>
    </LinearLayout>

</ScrollView>
