<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_ynhabit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abhishek.android.habitnme.AddYNHabitActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="end"
                android:textSize="30sp"
                android:text="@string/name_text"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="start"
                android:id="@+id/habit_name_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="end"
                android:id="@+id/yes_no_action_selector"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="start"
                android:id="@+id/habit_describe_text"
                android:inputType="text"
                android:hint="@string/add_habit_hint_yes_no"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="end"
                android:id="@+id/num_times_a_week_selector"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:id="@+id/times_a_week_text"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:hint="@string/times_a_week_string"/>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/submit_text"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
